# Qt6_IM_Client

./: .geminiignore  .gitignore  CMakeLists.txt  README.md  appicon.rc  config.ini  global.cpp  global.h  main.cpp  message.proto  singleton.cpp  singleton.h
ChatMsg_Layer/: chatmgr.cpp  chatmgr.h  chatsession.cpp  chatsession.h  sendratelimiter.cpp  sendratelimiter.h
Http_Layer/: httpmgr.cpp  httpmgr.h
Logic_Layer/: actiondebouncer.cpp  actiondebouncer.h  logicmgr.cpp  logicmgr.h
Model_Layer/: chatmsgmodel.cpp  chatmsgmodel.h  conversationsmodel.cpp  conversationsmodel.h  friendapplymodel.cpp  friendapplymodel.h  friendlistmodel.cpp  friendlistmodel.h  searchmodel.cpp  searchmodel.h
Net_Layer/: tcpmgr.cpp  tcpmgr.h  tcpworker.cpp  tcpworker.h
Sqlite_Layer/: sqlitemgr.cpp  sqlitemgr.h  sqlworker.cpp  sqlworker.h
Src/qml/ChatDialog/: ChatDialog.qml  NetworkStateBanner.qml
Src/qml/ChatDialog/ChatDialogUI/: ChatDataListItem.qml  ChatList.qml  ChatModeList.qml  ChatModeListItem.qml  ChatPage.qml  ChatStackLayout.qml  ContactModeList.qml  FriendApplyPage.qml  FriendApplyPopup.qml  FriendVerifyPage.qml  SearchItem.qml  SearchModeList.qml
Src/qml/basic/: BasicConfig.qml
Src/qml/commUI/: CustomWindow.qml  SpacerItem.qml  StateButton.qml
Src/qml/loginPopups/: GetVerifyCodeBtn.qml  LoginDialog.qml  RegistPopup.qml.autosave  RegisterPopup.qml
Src/qml/main/: Main.qml
UserData_Layer/: usermgr.cpp  usermgr.h
